Fix delete level button layout issue

--- a/src/charts/indicators/stochrsi/stochrsi.css
+++ b/src/charts/indicators/stochrsi/stochrsi.css
@@ -17,3 +17,7 @@
 .stochrsi input {
     line-height: 10px !important;
 }
+
+#stochrsi_level_delete {
+    white-space: nowrap;
+}
